<resources>
    <string name="app_name">Gamuda Land</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hùng Việt</string>
    <string name="nav_header_subtitle">hungdieu182@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Lô Đất</string>
    <string name="menu_gallery">Căn Hộ</string>
    <string name="menu_slideshow">Tin Tức</string>
    <string name="menu_tools">Thông Tin App</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="subtitle">ok</string>
</resources>
